deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-words
  labels:
    app: reverse-words   
spec:
  replicas: 1 
  template:
    spec:
      containers:
      - name: reverse-words
        image: quay.io/wserafin/tekton-reversewords:latest
